welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: value =< is not a member of Int
		if (a=<0 && b>=0) | (a>=0 && b=<0) {
                     ^posNeg:3: error: not found: value |
		if (a=<0 && b>=0) | (a>=0 && b=<0) {
                                  ^posNeg:8: error: value =< is not a member of Int
	else if (a=<0 && b<=0) {
                  ^